# rpcfg

./: .gitignore  Cargo.toml  create.sh  readme.md  repo_config.json  test.json
src/: common.rs  lib.rs  main.rs  models.rs  rp_macros.rs  test_utils.rs
src/commands/: collect.rs  delete.rs  fetch.rs  init.rs  mod.rs
tests/: common.rs
