[package]
name = "rp"
version = "0.1.0"
edition = "2021"
authors = ["Joe Long <joelong@outlook.com>"]
description = "A CLI tool for managing repository configurations"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "rp"
path = "src/main.rs"

