[package]
name = "rp"
version = "0.1.0"
edition = "2021"
authors = ["Joe Long <joelong@outlook.com>"]
description = "A CLI tool for managing repository configurations"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabwriter = "1.2"
colored = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
tempfile = "3.8.1"

[dev-dependencies]

uuid = { version = "1.3", features = ["v4"] }

[[bin]]
name = "rpcfg"
path = "src/main.rs"

[lib]
name = "rpcfg"
path = "src/lib.rs"